# sqm-ground-state

./: .gitignore  PHYSICS.md  README.md  REQUIREMENTS.md  conftest.py  pyproject.toml  requirements.txt
examples/: anharmonic.py  double_well.py  harmonic.py
src/: action.py  analysis.py  analytic.py  exact.py  experiment.py  langevin.py  lattice.py  observables.py  potentials.py  runner.py
src/sqm_ground_state/: action.py  analytic.py  experiment.py  langevin.py  observables.py  runner.py
tests/: test_action.py  test_analysis.py  test_analytic.py  test_exact.py  test_experiment.py  test_langevin.py  test_observables.py  test_potentials.py  test_runner.py
